// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteRow Unit Tests when in a normal notebook renders correctly 1`] = `
<div
  className="flex-container-row typical-setup bg-orange-light 'border-right-orange-light-5px'"
  data-role="note-row"
  draggable="true"
  onClick={[Function]}
  onDragOver={[Function]}
  onDragStart={[Function]}
  role="menuitem"
  tabIndex="-1"
>
  <span
    className="flex-1"
  >
    test note
  </span>
  <i
    className="fa fa-fw fa-close font-20"
    onClick={[Function]}
    role="button"
    tabIndex="-1"
  />
</div>
`;

exports[`NoteRow Unit Tests when in the dustbin renders correctly 1`] = `
<div
  className="flex-container-row typical-setup bg-orange-light 'border-right-orange-light-5px'"
  data-role="note-row"
  draggable="true"
  onClick={[Function]}
  onDragOver={[Function]}
  onDragStart={[Function]}
  role="menuitem"
  tabIndex="-1"
>
  <span
    className="flex-1"
  >
    test note
  </span>
  <i
    className="fa fa-fw fa-trash font-20"
    onClick={[Function]}
    role="button"
    tabIndex="-1"
  />
</div>
`;

exports[`NoteRow Unit Tests when is not the activeNote renders correctly 1`] = `
<div
  className="flex-container-row typical-setup bg-orange-light 'border-right-orange-light-5px'"
  data-role="note-row"
  draggable="true"
  onClick={[Function]}
  onDragOver={[Function]}
  onDragStart={[Function]}
  role="menuitem"
  tabIndex="-1"
>
  <span
    className="flex-1"
  >
    test note
  </span>
  <i
    className="fa fa-fw fa-close font-20"
    onClick={[Function]}
    role="button"
    tabIndex="-1"
  />
</div>
`;

exports[`NoteRow Unit Tests when is the activeNote renders correctly 1`] = `
<div
  className="flex-container-row typical-setup bg-red 'border-right-orange-light-5px'"
  data-role="note-row"
  draggable="true"
  onClick={[Function]}
  onDragOver={[Function]}
  onDragStart={[Function]}
  role="menuitem"
  tabIndex="-1"
>
  <span
    className="flex-1"
  >
    test note
  </span>
  <i
    className="fa fa-fw fa-close font-20"
    onClick={[Function]}
    role="button"
    tabIndex="-1"
  />
</div>
`;
